[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.19.3"
yew-router = "0.16.0"
yew-hooks = "0.1.56"
wasm-bindgen = "=0.2.80"
wasm-logger = "0.2.0"
stylist = { version = "0.10.0", features = ["yew"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv_codegen = "0.15.0"
gloo = "0.4"
lazy_static = "1.4.0"
log = "0.4.8"
parking_lot = "0.10.0"
pulldown-cmark = "0.6.1"
reqwest = { version = "0.11.7", features = ["json"] }
serde = "1"
thiserror = "1"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "Node",
  "Window",
  "HtmlCollection",
  "HtmlInputElement",
]

[dev-dependencies]
js-sys = "0.3.37"
wasm-bindgen-futures = "0.4.10"
wasm-bindgen-test = "0.3.10"
gloo-utils = "0.1.0"
